docs/v0.3.0a247/_sources/reference/_autosummary/matflow.rst.txt
matflow
=======

.. toctree::
   :includehidden:

.. automodule:: matflow

   
   
   .. rubric:: Module attributes

   .. autosummary::
      :toctree:
   
      app
   
   

   
   
   .. rubric:: Functions

   .. autosummary::
      :toctree:
      :nosignatures:
   
      cancel
      get_OS_info
      get_known_submissions
      get_shell_info
      make_and_submit_demo_workflow
      make_and_submit_workflow
      make_demo_workflow
      make_workflow
      run_hpcflow_tests
      run_tests
      show
      show_legend
      submit_workflow
   
   

   
   
   .. rubric:: Classes

   .. autosummary::
      :toctree:
      :template: custom-class-template.rst
      :nosignatures:
   
      Action
      ActionEnvironment
      ActionRule
      ActionScope
      ActionScopeType
      Command
      CommandFilesList
      CompactProblemFormatter
      DirectPosix
      DirectWindows
      Element
      ElementAction
      ElementActionRun
      ElementFilter
      ElementGroup
      ElementInputFiles
      ElementInputs
      ElementIteration
      ElementOutputFiles
      ElementOutputs
      ElementParameter
      ElementPropagation
      ElementRepeats
      ElementResources
      ElementSet
      Elements
      Environment
      EnvironmentsList
      Executable
      ExecutableInstance
      ExecutablesList
      Executor
      FileNameExt
      FileNameSpec
      FileNameStem
      FileSpec
      GroupList
      Import
      ImportParameter
      InputFile
      InputFileGenerator
      InputFileGeneratorSource
      InputSource
      InputSourceType
      InputValue
      Jobscript
      JobscriptBlock
      Loop
      MetaTask
      MetaTaskSchema
      MultiPathSequence
      NumCores
      OutputFileParser
      OutputFileParserSource
      OutputLabel
      Parameter
      ParameterPath
      ParameterPropagationMode
      ParameterValue
      Parameters
      ParametersList
      QueuedScheduler
      RepeatsDescriptor
      ResourceList
      ResourceSpec
      Rule
      RunDirAppFiles
      SGEPosix
      SchemaInput
      SchemaOutput
      SchemaParameter
      SlurmPosix
      SubParameter
      Submission
      Task
      TaskInputParameters
      TaskList
      TaskObjective
      TaskOutputParameters
      TaskSchema
      TaskSchemasList
      TaskSourceType
      TaskTemplateList
      ValuePerturbation
      ValueSequence
      Workflow
      WorkflowBlueprint
      WorkflowLoop
      WorkflowLoopList
      WorkflowTask
      WorkflowTaskList
      WorkflowTemplate
   
   

   
   
   



.. autosummary::
   :toctree:
   :template: custom-module-template.rst
   :recursive:

   
   matflow.cli
   
   
   matflow.encoders
   
   
   matflow.environments
   
   
   matflow.param_classes
   
   
   matflow.pytest_plugin
   
   
   matflow.tests
   

